fixed z-index

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -3,6 +3,7 @@
   background: white;
   position: sticky;
   top: 0px;
+  z-index: 500;
 }
 
 .navbar-lewagon .navbar-collapse {
